--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,28 +1,42 @@
 modLoader="javafml"
 loaderVersion="[36,)"
-issueTrackerURL="https://github.com/Hellish-Mods/Hellish-Powah/"
+
 license="LGPLv3"
+issueTrackerURL="https://github.com/Hellish-Mods/Hellish-Powah/issues"
 
 [[mods]]
 modId="powah"
 version="${file.jarVersion}"
+
 displayName="Hellish Powah"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/powah"
-authors="owmii, Rainbuu"
-description='''
-A fork of the mod Powah to add more customizability for Modern Modpacks.
-'''
-
-[[dependencies.powah]]
-    modId="lollipop"
-    mandatory=true
-    versionRange="[3.2.9,)"
-    ordering="NONE"
-    side="BOTH"
+authors="Hellish Mods & Modern Modpacks"
+credits="""
+owmii (Original author)
+Rainbuu (Coding)
+G_cat (Tech support)
+"""
+description="A fork of the mod Powah to add more customizability for Modern Modpacks."
 
 [[dependencies.powah]]
     modId="forge"
     mandatory=true
+
     versionRange="[36.0.0,)"
+    ordering="NONE"
+    side="BOTH"
+[[dependencies.powah]]
+    modId="minecraft"
+    mandatory=true
+
+    versionRange="[1.16.5,1.17)"
+    ordering="NONE"
+    side="BOTH"
+
+[[dependencies.powah]]
+    modId="lollipop"
+    mandatory=true
+
+    versionRange="[3.2.9,)"
     ordering="NONE"
     side="BOTH"
