--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,17 @@ buildscript {
         maven { url = 'https://files.minecraftforge.net/maven' }
         jcenter()
         mavenCentral()
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'idea'
+apply plugin: 'org.spongepowered.mixin'
 
 version = new Date().format('dd-MM-yyyy-HH-mm-ss')
 group = 'owmii.powah'
@@ -65,6 +68,7 @@ repositories {
         name "cursemaven"
         url "https://cursemaven.com"
     }
+    maven { url 'https://maven.blamejared.com' } //Patchouli is a mod by Vazkii
 }
 
 dependencies {
@@ -74,6 +78,9 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:7.7.1.153")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.16.5-4.0.5.3")
     implementation fg.deobf("curse.maven:lollipop-347954:3232534")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.3:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.3")
+    
 }
 
 tasks.withType(Copy).all { duplicatesStrategy 'exclude' }
