--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,19 @@ repositories {
         url "https://cursemaven.com"
     }
     maven { url 'https://maven.blamejared.com' } //Patchouli is a mod by Vazkii
+    maven { // Arch
+        url = "https://maven.architectury.dev"
+        content {
+            includeGroup "me.shedaniel"
+            includeGroup "me.shedaniel.cloth"
+        }
+    }
+    maven { // KJS
+        url = "https://maven.saps.dev/minecraft"
+        content {
+            includeGroup "dev.latvian.mods"
+        }
+    }
 }
 
 dependencies {
@@ -89,6 +102,9 @@ dependencies {
     implementation fg.deobf("curse.maven:lollipop-347954:3232534")
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.3:api")
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.3")
+    implementation fg.deobf("me.shedaniel:architectury-forge:1.22.32")
+    implementation fg.deobf("dev.latvian.mods:kubejs-forge:1605.3.19-build.229")
+    implementation fg.deobf("dev.latvian.mods:rhino-forge:1605.1.5-build.75")
     
 }
 
