--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'idea'
 apply plugin: 'org.spongepowered.mixin'
 
-version = new Date().format('dd-MM-yyyy-HH-mm-ss')
+version = "${System.env.VERSION}"
 group = 'owmii.powah'
 archivesBaseName = 'powah'
 
