not really needed but still

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ on:
         type: boolean
         description: "Generate assets"
         required: false
-        default: false
+        default: true
       publish:
         type: boolean
         description: "Publish to curseforge and modrinth"
