--- a/build.gradle
+++ b/build.gradle
@@ -108,7 +108,8 @@ dependencies {
     implementation fg.deobf("me.shedaniel:architectury-forge:1.22.32")
     implementation fg.deobf("dev.latvian.mods:kubejs-forge:1605.3.19-build.229")
     implementation fg.deobf("dev.latvian.mods:rhino-forge:1605.1.5-build.75")
-    
+
+    annotationProcessor 'org.spongepowered:mixin:0.8:processor'
 }
 
 tasks.withType(Copy).all { duplicatesStrategy 'exclude' }
